more fixes
Signed-off-by: morsak <xorsak02@stud.fit.vutbr.cz>